feat(ride requests Page): redesign the ride requests page
- show ride requests
- show the ride heading
- show departure time of the ride
- show name of passenger requesting to join ride
- make the ride request page responsive
- show accept button to accept a ride request
- show a cancel button to cancel a ride request
- users profile page can be accessed when use logs in

[(Delivers) #158660981]

--- a/UI/offer-ride.html
+++ b/UI/offer-ride.html
@@ -26,16 +26,18 @@
 
           <section class="div_navbar_items">
             <li class="navbar_items">
-              <a href="./index.html"> Home </a>
-            </li>
-            <li class="navbar_items">
-              <a href="./signup.html"> Sign Up </a>
-            </li>
-            <li class="navbar_items">
-              <a href="./signin.html"> Sign In </a>
+              <a href="./index.html"> Profile </a>
             </li>
             <li class="navbar_items">
               <a href="./rides.html"> Rides </a>
+            </li>
+            <li class="navbar_items">
+              <a href="./ride-requests.html">
+                Requests
+              </a>
+            </li>
+            <li class="navbar_items">
+              <a href="./index.html"> Sign out </a>
             </li>
           </section>
 
@@ -51,9 +53,11 @@
         <form action="" class="form">
           <label class="form-label">Ride Offer</label>
           <input class="form-control" type="text" placeholder="Ride Name">
+          <input class="form-control" type="text" placeholder="Location">
           <input class="form-control" type="text" placeholder="Destination">
-          <textarea class="form-control" name=" Descrption" placeholder="Description" id=" " cols="30 " rows="6 "></textarea>
-          <input class="form-control " type="number" min="2" max="20" placeholder="Number of Passengers ">
+          <input class="form-control" type="text" placeholder="Price">
+          <!-- <textarea class="form-control" name=" Descrption" placeholder="Description" id=" " cols="30 " rows="6 "></textarea> -->
+          <input class="form-control " type="number" min="2" max="20" placeholder="Number of Seats ">
 
           <a class="btn btn__primary btn__inline " href="#">Submit</a>
         </form>
