--- a/UI/rides.html
+++ b/UI/rides.html
@@ -27,21 +27,18 @@
 
           <section class="div_navbar_items">
             <li class="navbar_items">
-              <a href="./index.html"> Home </a>
-            </li>
-            <li class="navbar_items">
-              <a href="./signup.html"> Sign Up </a>
-            </li>
-            <li class="navbar_items">
-              <a href="./signin.html"> Sign In </a>
+              <a href="./index.html"> Profile </a>
             </li>
             <li class="navbar_items">
               <a href="./rides.html"> Rides </a>
             </li>
             <li class="navbar_items">
               <a href="./ride-requests.html">
-                <i class="fa fa-bell" aria-hidden="true"></i>
+                Requests
               </a>
+            </li>
+            <li class="navbar_items">
+              <a href="./index.html"> Sign out </a>
             </li>
           </section>
 
@@ -58,7 +55,7 @@
     </div>
 
     <!-- Features -->
-    <section class="rides mt-1">
+    <section class="rides mt-1 pb-4">
       <h4 class="ride-heading">Available Rides</h4>
       <div class="ride ride-1">
         <div class="icon">
