--- a/UI/rides.html
+++ b/UI/rides.html
@@ -154,7 +154,7 @@
           </p>
         </div>
         <div class="modal-footer">
-          <button href="" class="btn">Cancel</button>
+          <button href="" class="btn btn__grey">Cancel</button>
           <button href="" class="btn btn__primary">Join</button>
         </div>
       </div>
