feat(Database): fetch all rides from the dabase
- Setup postgres
- fetch all available rides from database

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -41,10 +41,9 @@
     <div class="form-wrapper">
       <form action="" class="form">
         <label class="form-label">Sign Up</label>
-        <input class="form-control" type="text" placeholder="First Name">
-        <input class="form-control" type="text" placeholder="Last Name">
-        <input class="form-control" type="text" placeholder="Phone">
+        <input class="form-control" type="text" placeholder="Username">
         <input class="form-control" type="text" placeholder="Email">
+        <input class="form-control" type="text" placeholder="Password">
         <input class="form-control" type="text" placeholder="Create Password">
 
         <a class="btn btn__primary btn__inline" href="./signin.html">Sign Up</a>
