feat(Database): Setup the database
- create a .sql schema in models
- rename pool to dbConfig
- profile link on ride page goes to users profile
- fix errors with eslint

[(Delivers) #158650357]

--- a/UI/rides.html
+++ b/UI/rides.html
@@ -27,7 +27,7 @@
 
           <section class="div_navbar_items">
             <li class="navbar_items">
-              <a href="./index.html"> Profile </a>
+              <a href="./user-profile.html"> Profile </a>
             </li>
             <li class="navbar_items">
               <a href="./rides.html"> Rides </a>
