feat(Database): update ui forms details
- update signin form fields to match database table
- update signup form fields to match database table

[(Delivers) #158650357]

--- a/UI/offer-ride.html
+++ b/UI/offer-ride.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper2">
     <div class="top" style="background: none;">
       <!-- Navigation -->
       <div class="navbar">
@@ -55,9 +55,9 @@
           <input class="form-control" type="text" placeholder="Ride Name">
           <input class="form-control" type="text" placeholder="Location">
           <input class="form-control" type="text" placeholder="Destination">
-          <input class="form-control" type="text" placeholder="Price">
-          <!-- <textarea class="form-control" name=" Descrption" placeholder="Description" id=" " cols="30 " rows="6 "></textarea> -->
-          <input class="form-control " type="number" min="2" max="20" placeholder="Number of Seats ">
+          <input class="form-control" type="time" placeholder="Departure Time">
+          <input class="form-control" type="date" placeholder="Date">
+          <input class="form-control" type="number" min="2" max="20" placeholder="Seats Available">
 
           <a class="btn btn__primary btn__inline " href="#">Submit</a>
         </form>
