--- a/UI/signup.html
+++ b/UI/signup.html
@@ -41,10 +41,13 @@
     <div class="form-wrapper">
       <form action="" class="form">
         <label class="form-label">Sign Up</label>
+        <input class="form-control" type="text" placeholder="Firstname">
+        <input class="form-control" type="text" placeholder="Lastname">
+        <input class="form-control" type="number" placeholder="Phone">
         <input class="form-control" type="text" placeholder="Username">
         <input class="form-control" type="text" placeholder="Email">
-        <input class="form-control" type="text" placeholder="Password">
-        <input class="form-control" type="text" placeholder="Create Password">
+        <input class="form-control" type="password" placeholder="Password">
+        <input class="form-control" type="password" placeholder="Confirm Password">
 
         <a class="btn btn__primary btn__inline" href="./signin.html">Sign Up</a>
         <p>Already Registered?
