chore(middleware): add validation to user sign up and sign in
- add validation for sign up route
- add validation for sign in route

[(Finshes) #158746961]

--- a/UI/offer-ride.html
+++ b/UI/offer-ride.html
@@ -52,12 +52,12 @@
       <div class="offer-ride-form">
         <form action="" class="form">
           <label class="form-label">Ride Offer</label>
-          <input class="form-control" type="text" placeholder="Ride Name">
-          <input class="form-control" type="text" placeholder="Location">
-          <input class="form-control" type="text" placeholder="Destination">
-          <input class="form-control" type="time" placeholder="Departure Time">
-          <input class="form-control" type="date" placeholder="Date">
-          <input class="form-control" type="number" min="2" max="20" placeholder="Seats Available">
+          <input class="form-control" type="text" name="ridename" placeholder="Ride Name">
+          <input class="form-control" type="text" name="location" placeholder="Location">
+          <input class="form-control" type="text" name="destination" placeholder="Destination">
+          <input class="form-control" type="time" name="time" placeholder="Departure Time">
+          <input class="form-control" type="date" name="date" placeholder="Date">
+          <input class="form-control" type="number" min="2" max="20" name="seats" placeholder="Seats Available">
 
           <a class="btn btn__primary btn__inline " href="#">Submit</a>
         </form>
