--- a/UI/signin.html
+++ b/UI/signin.html
@@ -42,8 +42,8 @@
     <div class="form-wrapper">
       <form action="" class="form">
         <label class="form-label" for="signin">Sign In</label>
-        <input class="form-control" type="text" placeholder="Email" required>
-        <input class="form-control" type="text" placeholder="Password" required>
+        <input class="form-control" type="text" placeholder="Email" name="email" required>
+        <input class="form-control" type="text" placeholder="Password" name="password" required>
 
         <a class="btn btn__primary btn__inline" href="./user-profile.html">Sign In</a>
         <p>Not a member?
