bg(navbar): change navbar background colour
- change the background colour of the navbar
- make navigation not fixed

[(Fixes) #158950282]

--- a/UI/ride-requests.html
+++ b/UI/ride-requests.html
@@ -21,12 +21,12 @@
 
           <li class="logo">
             <a href="./index.html">
-              <img src="./images/ride-logo-blue.png" alt="logo"> </a>
+              <img src="./images/ride-logo.png" alt="logo"> </a>
           </li>
 
           <section class="div_navbar_items">
             <li class="navbar_items">
-              <a href="./index.html"> Profile </a>
+              <a href="./user-profile.html"> Profile </a>
             </li>
             <li class="navbar_items">
               <a href="./rides.html"> Rides </a>
