--- a/UI/index.html
+++ b/UI/index.html
@@ -19,75 +19,72 @@
 
           <li class="logo">
             <a href="./index.html">
-              <img src="./images/ride-logo-blue.png" alt="logo"> </a>
+              <img src="./images/ride-logo.png" alt="logo"> </a>
           </li>
 
           <section class="div_navbar_items">
             <li class="navbar_items">
-              <a href="./index.html"> Home </a>
-            </li>
-            <li class="navbar_items">
               <a href="./signup.html"> Sign Up </a>
             </li>
-            <li class="navbar_items">
-              <a href="./signin.html"> Sign In </a>
+            <li class=" navbar_items ">
+              <a href="./signin.html "> Sign In </a>
             </li>
-            <li class="navbar_items">
-              <a href="./rides.html"> Rides </a>
+            <li class="navbar_items ">
+              <a href="./rides.html "> Rides </a>
             </li>
           </section>
 
-          <li class="icon">
-            <a href="#" onclick="navBarFunction()"> &#9776;</a>
+          <li class="icon ">
+            <a href="# " onclick="navBarFunction()" style="font-size: 1.3em;"> &#9776;</a>
           </li>
         </ul>
       </div>
       <!-- End of Navigation -->
 
-      <header class="hero">
+      <header class="hero ">
         <h1>Get the best deals on your rides</h1>
         <h2>Join Ride My Way community and save time
           <br> and money on your commute everyday
         </h2>
-        <a class="btn btn__primary btn__inline btn__rounded btn__inline" href="./signup.html">Get Started</a>
+        <a class="btn btn__primary btn__inline btn__rounded btn__inline " href="./signup.html ">Get Started</a>
       </header>
 
     </div>
 
-    <div class="intro text-center">
+    <div class="intro text-center ">
       <h4>Ride My Way In Your City</h4>
-      <p class="lead">
+      <p class="lead ">
         Wherever you are in Nigeria, count on Ride My Way for rides in minutes!
         <br>From Lagos to Abuja, Ride My Way is only a few clicks away.
       </p>
     </div>
 
     <!-- Features -->
-    <section class="features">
-      <h4 class="feature-heading">Why Ride With Us</h4>
-      <div class="features-grid mt-1">
+    <section class="features ">
+      <h4 class="feature-heading ">Why Ride With Us</h4>
+      <div class="features-grid mt-1 ">
         <!-- feature one -->
-        <div class="feature feature-1">
-          <div class="icon">
-            <img src="./images/confirmed.png" alt="">
+        <div class="feature feature-1 ">
+          <div class="icon ">
+            <img src="./images/confirmed.png " alt=" ">
           </div>
           <h5>Easy Booking</h5>
           <p>Select your preferred rides and ride with only those you wish to. Riding with your colleagues, friends, and family
             has never been easier.</p>
         </div>
         <!-- feature Two -->
-        <div class="feature feature-2">
-          <div class="icon">
-            <img src="./images/customer-care.png" alt="">
+        <div class="feature feature-2 ">
+          <div class="icon ">
+            <img src="./images/customer-care.png " alt=" ">
           </div>
           <h5>24/7 Customer Care</h5>
           <p>Our agents are always online 24/7 to sort out any issues you might be experiencing. We put our customers first
             before anything else.</p>
         </div>
         <!-- feature Three -->
-        <div class="feature feature-3">
-          <div class="icon">
-            <img src="./images/time-management.png" alt="">
+        <div class="feature feature-3 ">
+          <div class="icon ">
+            <img src="./images/time-management.png " alt=" ">
           </div>
           <h5>Ride on time</h5>
           <p>Dont waste any more time waiting for rides. With our pool of several cars and drivers in your area, get to your
@@ -96,9 +93,9 @@
       </div>
     </section>
 
-    <section class="about">
-      <div class="about__details">
-        <h4 class="text-center">About Us</h4>
+    <section class="about ">
+      <div class="about__details ">
+        <h4 class="text-center ">About Us</h4>
         <p>
           As the most reliable carpooling service, we help thousands of users, both passengers and drivers make the most of their rides.
           Passengers have control over the rides they wish to join and drivers have control over rides they wish to accept.
@@ -107,7 +104,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer ">
       <p>&copy; 2018. Made by Emmanuel</p>
     </footer>
   </div>
