bg(navbar): make navbar fixed
[(Fixes) #158950282]

--- a/UI/offer-ride.html
+++ b/UI/offer-ride.html
@@ -18,10 +18,9 @@
       <div class="navbar">
 
         <ul>
-
           <li class="logo">
             <a href="./index.html">
-              <img src="./images/ride-logo-blue.png" alt="logo"> </a>
+              <img src="./images/ride-logo.png" alt="logo"> </a>
           </li>
 
           <section class="div_navbar_items">
@@ -52,7 +51,6 @@
       <div class="offer-ride-form">
         <form action="" class="form">
           <label class="form-label">Ride Offer</label>
-          <input class="form-control" type="text" name="ridename" placeholder="Ride Name">
           <input class="form-control" type="text" name="location" placeholder="Location">
           <input class="form-control" type="text" name="destination" placeholder="Destination">
           <input class="form-control" type="time" name="time" placeholder="Departure Time">
