--- a/UI/rides.html
+++ b/UI/rides.html
@@ -29,7 +29,7 @@
               <a href="./user-profile.html"> Profile </a>
             </li>
             <li class="navbar_items">
-              <a href="./rides.html"> New Ride </a>
+              <a href="./offer-ride.html"> New Ride </a>
             </li>
             <li class="navbar_items">
               <a href="./ride-requests.html">
