ft(signup-endpoint): consume sign up endpoint
- add form validation to signup form
- add loading animation while request is being processed
- show registration status
- redirect to sign in page after successfull sign up
- update readme link to api document

[(Delivers) #15921616108]

--- a/UI/rides.html
+++ b/UI/rides.html
@@ -152,8 +152,8 @@
           </p>
         </div>
         <div class="modal-footer">
-          <button href="" class="btn btn__grey">Cancel</button>
-          <button href="" class="btn btn__primary">Join</button>
+          <button class="btn btn__grey">Cancel</button>
+          <button class="btn btn__primary">Join</button>
         </div>
       </div>
 
@@ -181,11 +181,6 @@
 
     // Get the <span> element that closes the modal
     var span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks on the button, open the modal 
-    // btn.onclick = function () {
-    //   modal.style.display = "block";
-    // }
 
 
     // When the user clicks on <span> (x), close the modal
