--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -49,8 +49,14 @@
     <div class="profile-page mt-1">
       <!-- Profile Image -->
       <div class="profile-info">
-        <img src="./images//user-image.png" alt="profile-img">
-        <h4 class="profie-name text-center">Shawn</h4>
+        <div class="user-info">
+          <img src="./images//user-image.png" class="profle-image" alt="profile-img">
+          <h4 class="profile-name text-center">Shawn Mendez</h4>
+        </div>
+
+        <div class="rides-info">
+          rides taken
+        </div>
       </div>
 
       <!-- User Ride count -->
