--- a/UI/signin.html
+++ b/UI/signin.html
@@ -40,12 +40,12 @@
     </div>
     <!-- Signup Form -->
     <div class="form-wrapper">
-      <form action="" class="form">
+      <form action="" class="form signin-form">
         <label class="form-label" for="signin">Sign In</label>
         <input class="form-control" type="text" placeholder="Email" name="email" required>
         <input class="form-control" type="text" placeholder="Password" name="password" required>
 
-        <a class="btn btn__primary btn__inline" href="./user-profile.html">Sign In</a>
+        <a class="btn btn__primary btn__inline signin-btn" href="./user-profile.html">Sign In</a>
         <p>Not a member?
           <a href="signup.html">Sign up</a>
         </p>
@@ -63,6 +63,7 @@
       document.getElementsByClassName("navbar")[0].classList.toggle("responsive");
     }
   </script>
+  <!-- <script> src="../client/validate.js"</script> -->
 </body>
 
 </html>
