--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+  <link rel="icon" href="./images/ride-logo-favicon.png">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/user-profile.css">
   <link rel="stylesheet" href="./styles/rides.css">
@@ -54,26 +54,28 @@
           <h4 class="profile-name text-center">Shawn Mendez</h4>
         </div>
 
-        <div class="rides-info">
-          rides taken
+        <div class="rides-count">
+          <div class="rides-taken">
+            <h1>25</h1>
+            <p>Rides Given</p>
+          </div>
+          <div class="rides-given">
+            <h1>40</h1>
+            <p>Rides Taken</p>
+          </div>
         </div>
       </div>
 
-      <!-- User Ride count -->
-      <div class="user-ride-count">
-        <div class="text-center">
-          <h5>Number of Rides Taken</h5>
-          <span class="user-count-num">2</span>
-        </div>
-
-        <div class="text-center">
-          <h5>Number of Rides Given</h5>
-          <span class="user-count-num">2</span>
-        </div>
+      <div class="profile-links">
+        <li><a href="#rides-taken">Rides Taken</a></li>
+        <li><a href="#rides-given" target>Rides Given</a></li>
+        <li><a href="#">Profile Settings</a></li>
+        <li><a href="#">Edit ride</a></li>
       </div>
+
 
       <!-- List of Rides Taken -->
-      <div class="box mt-1">
+      <div class="box mt-1" id="rides-taken">
         <div class="box__header text-center">
           <h4 class="box__title">Rides Taken</h4>
         </div>
@@ -94,7 +96,7 @@
       </div>
 
       <!-- List of Rides Given -->
-      <div class="box">
+      <div class="box" id="rides-given">
         <div class="box__header text-center">
           <h4 class="box__title">Rides Given</h4>
         </div>
@@ -113,12 +115,13 @@
           </div>
         </div>
       </div>
-
-      <!-- Footer -->
-      <footer class="footer">
-        <p>&copy; 2018. Made by Emmanuel</p>
-      </footer>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <p>&copy; 2018. Made by Emmanuel</p>
+    </footer>
+  </div>
 
 
     <!-- Javascript for responsive navigation -->
