--- a/UI/signup.html
+++ b/UI/signup.html
@@ -16,7 +16,7 @@
       color: white;
       border-radius: 5px;
       padding: 10px 15px;
-      font-size: 1rem;
+      font-size: 0.9em;
       text-align: left;
       margin-bottom: 10px;
     }
