--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/user-profile.css">
   <link rel="stylesheet" href="./styles/rides.css">
+  <script src="../client/profile.js"></script>
 
   <title>Ride My Way</title>
 </head>
 
-<body>
+<body onload="profile()">
   <div class="wrapper">
     <!-- Navigation -->
     <div class="navbar">
