--- a/UI/signup.html
+++ b/UI/signup.html
@@ -12,11 +12,11 @@
   <style>
     .message {
       display: none;
-      background: rgb(225, 69, 69);
-      color: white;
+      background: #F2DEDE;
+      color: #C86F6E;
       border-radius: 5px;
       padding: 10px 15px;
-      font-size: 0.9em;
+      font-size: 1rem;
       text-align: left;
       margin-bottom: 10px;
     }
