--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Ride My Way App</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="refresh" content="0; url=UI/index.html" />
+
+  <title>Ride My Way</title>
+</head>
+<body>
+  
+</body>
+</html>
