--- a/UI/signin.html
+++ b/UI/signin.html
@@ -13,11 +13,11 @@
   <style>
     .message {
       display: none;
-      background: rgb(225, 69, 69);
-      color: white;
+      background: #F2DEDE;
+      color: #C86F6E;
       border-radius: 5px;
       padding: 10px 15px;
-      font-size: 0.9rem;
+      font-size: 1rem;
       text-align: left;
       margin-bottom: 10px;
       transition: 0.5s ease-in-out all;
