--- a/UI/rides.html
+++ b/UI/rides.html
@@ -53,7 +53,11 @@
     </section>
 
     <!-- Modal -->
-    <div id="modal" class="modal"></div>
+    <div id="modal" class="modal">
+      <div id="modal-content">
+        <div class="loader"></div>
+      </div>
+    </div>
     <!-- closing container -->
 
     <!-- loading animation while signup is processing-->
