Make ui for ride requests page better

--- a/UI/ride-requests.html
+++ b/UI/ride-requests.html
@@ -55,7 +55,7 @@
         </div>
 
         <!-- Request details -->
-        <div class="box__group">
+        <div class="box__group ride-requests">
           <div class="request-details">
             <h5>Ikorodu to Yaba</h5>
             <p>Departure Time: 4:00pm</p>
@@ -67,7 +67,7 @@
             <a class="btn btn__grey">Cancel</a>
           </div>
         </div>
-        <div class="box__group">
+        <div class="box__group ride-requests">
           <div class="request-details">
             <h5>Maryland to Ikeja</h5>
             <p>Departure Time: 4:00pm</p>
