Show ride requests on requests page

--- a/UI/ride-requests.html
+++ b/UI/ride-requests.html
@@ -49,42 +49,17 @@
     <!-- End of Navigation -->
 
     <section class="ride-requests-body">
-      <div class="box">
+      <div class="box ride-requests">
         <div class="box__header text-center">
           <h4 class="box__title">Ride Notifications</h4>
         </div>
 
-        <!-- Request details -->
-        <div class="box__group ride-requests">
-          <div class="request-details">
-            <h5>Ikorodu to Yaba</h5>
-            <p>Departure Time: 4:00pm</p>
-            <p>Seats Available: 3</p>
-            <p>Requester: Dave</p>
-          </div>
-          <div class="request-btns">
-            <a class="btn btn__secondary">Accept</a>
-            <a class="btn btn__grey">Cancel</a>
-          </div>
-        </div>
-        <div class="box__group ride-requests">
-          <div class="request-details">
-            <h5>Maryland to Ikeja</h5>
-            <p>Departure Time: 4:00pm</p>
-            <p>Seats Available: 3</p>
-            <p>Requester: Dave</p>
-          </div>
-          <div class="request-btns">
-            <a class="btn btn__secondary">Accept</a>
-            <a class="btn btn__grey">Cancel</a>
-          </div>
-        </div>
       </div>
     </section>
 
 
-    <footer class="footer ">
-      <p>&copy; 2018. Made by Emmanuel</p>
+    <footer class="footer">
+      <p style="color: #888">&copy; 2018. Made by Emmanuel</p>
     </footer>
   </div>
   <!-- End of wrapper-->
@@ -95,6 +70,7 @@
       document.getElementsByClassName("navbar")[0].classList.toggle("responsive");
     }
   </script>
+  <script src="../client/requests.js"></script>
 </body>
 
 </html>
