--- a/UI/user-profile.html
+++ b/UI/user-profile.html
@@ -89,7 +89,7 @@
 
         <!-- Rides details -->
         <div class="box__group rides__taken-details">
-          <div class="request-details">
+          <div class="request-detail">
             <h5>Ikorodu to Yaba</h5>
             <p>Date-Taken: 23-2-2018</p>
           </div>
@@ -104,10 +104,6 @@
 
         <!-- Rides details -->
         <div class="box__group rides__given-details">
-          <div class="ride-details">
-            <h5>Ikorodu to Yaba</h5>
-            <p>Date-Given: 23-2-2018</p>
-          </div>
         </div>
       </div>
     </div>
